--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/bootstrap.css">
   </head>
   <body>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="flex-center">
+            <a class="fb">
+            <img src="./img/fb.png" class="fbimg" alt="">
+            </a>
+            <a href="" class="twitter">
+            <img src="./img/twitter.png" class="twitterimg" alt="">
+            </a>
+            <a href="" class="insta">
+            <img src="./img/insta.png" class="instaimg" alt="">
+            </a>
+          </div>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+  </footer>
   </body>
 </html>
