--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="/CSS/style.css">
+
+    <title>Titanic</title>
+    <link rel="stylesheet" href="./CSS/style.css">
   </head>
+
   <body>
+<h1>TITANIC</h1>
+
+ <img src="photos/titanic.jpg" alt="">
 
   </body>
 </html>
